# monte-carlo-markov-chain-probabilistic-logic-programs

./: Makefile  README.md  main.py  main_family.py  main_imdb.py  main_nell.py  pyproject.toml  satisfy.py  state.py  train.py
data/: family.txt  family_examples.txt  family_prob.txt  nell.txt
data/imdb/: imdb_examples.txt  imdb_facts.txt
data/nell/athleteplaysforteam/: nell_athleteplaysforteam_examples.txt  nell_athleteplaysforteam_examples_small.txt  nell_athleteplaysforteam_facts.txt
data/nell/athleteplaysinleague/: nell_athleteplaysinleague_examples.txt  nell_athleteplaysinleague_facts.txt
data/nell/athleteplayssport/: nell_athleteplayssport_examples.txt  nell_athleteplayssport_facts.txt
nell/: generate_nell_mc_plp.py
results/: athleteplaysforteam_2_clauses.txt  athleteplaysforteam_2_results.txt  athleteplaysforteam_3_clauses.txt  athleteplaysforteam_3_results.txt  athleteplaysforteam_clauses.txt  athleteplaysforteam_results.txt  athleteplaysinleague_1_clauses.txt  athleteplaysinleague_1_results.txt  grandmother_2_clauses.txt  grandmother_2_results.txt  grandmother_3_clauses.txt  grandmother_3_results.txt  grandmother_4_clauses.txt  grandmother_4_results.txt  grandmother_5_clauses.txt  grandmother_5_results.txt  grandmother_6_clauses.txt  grandmother_6_results.txt  grandmother_clauses.txt  grandmother_results.txt  imdb_clauses.txt  imdb_results.txt
